--- a/prova.html
+++ b/prova.html
@@ -3,34 +3,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scuola Esempio</title>
-  <link rel="stylesheet" href="stili.css">
+  <title>La Mia Pagina</title>
+  <style>
+    /* Reset di base */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Corpo della pagina */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Header */
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2em;
+    }
+
+    /* Menu di navigazione */
+    nav {
+      background-color: #0066cc;
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* Contenuto principale */
+    main {
+      padding: 40px;
+      max-width: 1000px;
+      margin: auto;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    main h2 {
+      color: #004080;
+      margin-bottom: 20px;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <h1>Istituto Comprensivo Galileo Galilei</h1>
-    <p>Educazione, Innovazione, Futuro</p>
+    <h1>Benvenuto nel mio sito</h1>
+    <p>Un semplice esempio di layout</p>
   </header>
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Chi Siamo</a>
-    <a href="#">Offerta Formativa</a>
+    <a href="#">Chi siamo</a>
+    <a href="#">Servizi</a>
     <a href="#">Contatti</a>
   </nav>
 
   <main>
-    <h2>Benvenuti nel nostro sito scolastico</h2>
-    <p>
-      Il nostro istituto si impegna a offrire un'istruzione di qualità in un ambiente inclusivo e stimolante.
-    </p>
-    <p>
-      Esplora il nostro sito per scoprire di più sui nostri progetti, il corpo docente e le attività extracurriculari.
-    </p>
+    <h2>Contenuto Principale</h2>
+    <p>Questo è un esempio di contenuto centrale della pagina. Puoi personalizzarlo come vuoi per il tuo progetto.</p>
   </main>
 
   <footer>
-    <p>&copy; 2025 Istituto Comprensivo Galileo Galilei - Tutti i diritti riservati</p>
+    <p>&copy; 2025 Il Mio Sito. Tutti i diritti riservati.</p>
   </footer>
+
 </body>
+</html>
 </html>
