--- a/prova.html
+++ b/prova.html
@@ -101,7 +101,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Il Mio Sito. Tutti i diritti riservati.</p>
+    <p> Il Mio Sito. Tutti i diritti riservati.</p>
   </footer>
 
 </body>
