--- a/prova.html
+++ b/prova.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Mia Pagina</title>
+  <title>Sito per scuola</title>
   <style>
     /* Reset di base */
     * {
@@ -84,24 +84,23 @@
 <body>
 
   <header>
-    <h1>Benvenuto nel mio sito</h1>
-    <p>Un semplice esempio di layout</p>
+    <h1>Pagina principale</h1>
+    <p>Non so dove si trova!</p>
   </header>
 
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Chi siamo</a>
-    <a href="#">Servizi</a>
-    <a href="#">Contatti</a>
+    <a href="#">Primo periodo</a>
+    <a href="#">Secondo periodo</a>
+    
   </nav>
 
   <main>
-    <h2>Contenuto Principale</h2>
-    <p>Questo è un esempio di contenuto centrale della pagina. Puoi personalizzarlo come vuoi per il tuo progetto.</p>
+    <h2>Dove?</h2>
+    <p>Boh</p>
   </main>
 
   <footer>
-    <p> Il Mio Sito. Tutti i diritti riservati.</p>
+    <p>Non credo utile</p>
   </footer>
 
 </body>
