--- a/prova.html
+++ b/prova.html
@@ -85,7 +85,7 @@
 
   <header>
     <h1>Pagina principale</h1>
-    <p>Non so dove si trova!</p>
+    <p>Tutti i lavori che abbiamo svolto durante l'anno scolastico</p>
   </header>
 
   <nav>
