--- a/prova.html
+++ b/prova.html
@@ -65,11 +65,32 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
+    
     main h2 {
       color: #004080;
       margin-bottom: 20px;
     }
+
+    .box-container {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap; /* Permette di adattarsi su schermi piccoli */
+  justify-content: center;
+}
+
+.box {
+  flex: 1 1 45%; /* Adatta la larghezza, min 45% */
+  background-color: #e6ecf5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  min-width: 250px;
+}
+
+.box h3 {
+  color: #004080;
+  margin-bottom: 10px;
+}
 
     /* Footer */
     footer {
@@ -94,10 +115,19 @@
     
   </nav>
 
-  <main>
-    <h2>Dove?</h2>
-    <p>Boh</p>
-  </main>
+<main>
+  <h2>I Nostri Lavori</h2>
+  <div class="box-container">
+    <div class="box">
+      <h3>Primo periodo</h3>
+      <p>Qui puoi scrivere cosa avete fatto durante il primo periodo scolastico.</p>
+    </div>
+    <div class="box">
+      <h3>Secondo periodo</h3>
+      <p>Qui puoi inserire i lavori del secondo periodo, progetti, esercizi, ecc.</p>
+    </div>
+  </div>
+</main>
 
   <footer>
     <p>Non credo utile</p>
