--- a/prova.html
+++ b/prova.html
@@ -116,7 +116,7 @@
   </nav>
 
 <main>
-  <h2>I Nostri Lavori</h2>
+  <h2>Tutti i nostri lavori! </h2>
   <div class="box-container">
     <div class="box">
       <h3>Primo periodo</h3>
