--- a/prova.html
+++ b/prova.html
@@ -116,7 +116,9 @@
   </nav>
 
 <main>
+  <center>
   <h2>Tutti i nostri lavori! </h2>
+  </center>
   <div class="box-container">
     <div class="box">
       <h3>Primo periodo</h3>
