--- a/prova.html
+++ b/prova.html
@@ -22,13 +22,15 @@
 
     /* Header */
     header {
-      background-color: #004080;
+      background-image: url('sfondo.jpg');
+      background-size: cover;
+      background-position: center;
       color: white;
-      padding: 20px 0;
+      padding: 60px 20px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-
+  
     header h1 {
       font-size: 2.5em;
       margin-bottom: 10px;
