--- a/prova.html
+++ b/prova.html
@@ -124,7 +124,15 @@
   <div class="box-container">
     <div class="box">
       <h3>Primo periodo</h3>
-      <p>Qui puoi scrivere cosa avete fatto durante il primo periodo scolastico.</p>
+      <p> <a href="intestazione.html">  intestazione.html </a> </p>
+  <p> <a href="formattazione.html">  formattazione.html </a> </p>
+  <p> <a href="foto.html">  foto.html </a> </p>
+  <p> <a href="liste.html">  liste.html </a> </p>
+  <p> <a href="paragrafi.html">  paragrafi.html </a> </p>
+  <p> <a href="tabella.html">  tabella.html </a> </p>
+  <p> <a href="esercitazione.html"> esercitazione.html </a> </p>
+  <p> <a href="registrazione.html"> registrazione.html </a> </p>
+</body>
     </div>
     <div class="box">
       <h3>Secondo periodo</h3>
