--- a/prova.html
+++ b/prova.html
@@ -22,7 +22,7 @@
 
     /* Header */
     header {
-      background-image: url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1350&q=80');
+      background-color:#004080;
       background-size: cover;
       background-position: center;
       color: white;
